demos/demo-01-iac/cdk-airflow-eks/cdk.out/airflow-devopswld-vpc.template.json
{
  "Resources": {
    "EKSDevOpsWldApacheAirflowVPC475066EE": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.192.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/Resource"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet1SubnetE2F8326E": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.192.0.0/24",
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "AvailabilityZone": "us-east-2a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1/Subnet"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet1RouteTableED067FF1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1/RouteTable"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet1RouteTableAssociation3765A836": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet1RouteTableED067FF1"
        },
        "SubnetId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet1SubnetE2F8326E"
        }
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1/RouteTableAssociation"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet1DefaultRoute7B48D0F1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet1RouteTableED067FF1"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCIGWC405B69F"
        }
      },
      "DependsOn": [
        "EKSDevOpsWldApacheAirflowVPCVPCGW44C5EDF2"
      ],
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1/DefaultRoute"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet1EIPBDE60B80": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1/EIP"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet1NATGateway7FE58F7D": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet1SubnetE2F8326E"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "EKSDevOpsWldApacheAirflowVPCpublicSubnet1EIPBDE60B80",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet1/NATGateway"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet2SubnetFA06CE04": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.192.1.0/24",
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "AvailabilityZone": "us-east-2b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet2/Subnet"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet2RouteTable70850E11": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet2/RouteTable"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet2RouteTableAssociation7FB7E460": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet2RouteTable70850E11"
        },
        "SubnetId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet2SubnetFA06CE04"
        }
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet2/RouteTableAssociation"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCpublicSubnet2DefaultRouteD543DCB5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet2RouteTable70850E11"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCIGWC405B69F"
        }
      },
      "DependsOn": [
        "EKSDevOpsWldApacheAirflowVPCVPCGW44C5EDF2"
      ],
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/publicSubnet2/DefaultRoute"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCprivateSubnet1Subnet6E02F18F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.192.2.0/24",
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "AvailabilityZone": "us-east-2a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet1/Subnet"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCprivateSubnet1RouteTable6EA87BCC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet1/RouteTable"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCprivateSubnet1RouteTableAssociation7352FF3B": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCprivateSubnet1RouteTable6EA87BCC"
        },
        "SubnetId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCprivateSubnet1Subnet6E02F18F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet1/RouteTableAssociation"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCprivateSubnet1DefaultRoute424F6C71": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCprivateSubnet1RouteTable6EA87BCC"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet1NATGateway7FE58F7D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet1/DefaultRoute"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCprivateSubnet2SubnetDEB426E4": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.192.3.0/24",
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "AvailabilityZone": "us-east-2b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet2/Subnet"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCprivateSubnet2RouteTableACAED1A4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "Tags": [
          {
            "Key": "kubernetes.io/role/internal-elb",
            "Value": "1"
          },
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet2/RouteTable"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCprivateSubnet2RouteTableAssociation9CD95E05": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCprivateSubnet2RouteTableACAED1A4"
        },
        "SubnetId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCprivateSubnet2SubnetDEB426E4"
        }
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet2/RouteTableAssociation"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCprivateSubnet2DefaultRoute31291912": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCprivateSubnet2RouteTableACAED1A4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCpublicSubnet1NATGateway7FE58F7D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/privateSubnet2/DefaultRoute"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCIGWC405B69F": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/IGW"
      }
    },
    "EKSDevOpsWldApacheAirflowVPCVPCGW44C5EDF2": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
        },
        "InternetGatewayId": {
          "Ref": "EKSDevOpsWldApacheAirflowVPCIGWC405B69F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/EKS-DevOpsWld-ApacheAirflow-VPC/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOUQuCMBSFf0vvc4UR9CoS4UsNDV9jrhsudRN3l4j435tp7el+9+NwOCEN6W7DexOIRxXUsqBjhlxUxKk7iJCOeStI/FQ5iwmzRS1FZgsFODtPqbYIN17U4L13kTFaSI5Sq394hlPC5nPheOYIPR8I6+TboS9OFELn+BdYlqxfhG5q2YDCiaRgtO3Et/dqsbXLrtVOhA1YarXd0yM9bF5GyqCzCmUDNF3uB58kxTAKAQAA"
      },
      "Metadata": {
        "aws:cdk:path": "airflow-devopswld-vpc/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "VPCId": {
      "Description": "VPC ID",
      "Value": {
        "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
      },
      "Export": {
        "Name": "us-east-2:704533066374:airflow-devopswld-vpc:vpc-id"
      }
    },
    "ExportsOutputRefEKSDevOpsWldApacheAirflowVPC475066EEF6BA0C3F": {
      "Value": {
        "Ref": "EKSDevOpsWldApacheAirflowVPC475066EE"
      },
      "Export": {
        "Name": "airflow-devopswld-vpc:ExportsOutputRefEKSDevOpsWldApacheAirflowVPC475066EEF6BA0C3F"
      }
    },
    "ExportsOutputRefEKSDevOpsWldApacheAirflowVPCprivateSubnet1Subnet6E02F18F4D76C6CC": {
      "Value": {
        "Ref": "EKSDevOpsWldApacheAirflowVPCprivateSubnet1Subnet6E02F18F"
      },
      "Export": {
        "Name": "airflow-devopswld-vpc:ExportsOutputRefEKSDevOpsWldApacheAirflowVPCprivateSubnet1Subnet6E02F18F4D76C6CC"
      }
    },
    "ExportsOutputRefEKSDevOpsWldApacheAirflowVPCprivateSubnet2SubnetDEB426E451D1AE9C": {
      "Value": {
        "Ref": "EKSDevOpsWldApacheAirflowVPCprivateSubnet2SubnetDEB426E4"
      },
      "Export": {
        "Name": "airflow-devopswld-vpc:ExportsOutputRefEKSDevOpsWldApacheAirflowVPCprivateSubnet2SubnetDEB426E451D1AE9C"
      }
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
